--- a/adminfront/package.json
+++ b/adminfront/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "chart.js": "^2.7.3",
     "element-ui": "^2.1.0",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
@@ -22,6 +23,7 @@
     "nprogress": "^0.2.0",
     "screenfull": "^3.3.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vue-wechat-title": "^2.0.4",
     "vuex": "^3.0.1"
