--- a/adminfront/package.json
+++ b/adminfront/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.1.0",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
+    "live2d4vue": "^0.1.0",
     "macaddress": "^0.2.9",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
