--- a/adminfront/package.json
+++ b/adminfront/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "chart.js": "^2.9.4",
+    "echarts": "^5.3.0",
     "element-ui": "^2.1.0",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
